Interviews/Mattermost/Development/src/styles/global.sass
// *********
// Variables
// *********

// Colors
$primary: hsla(216, 97%, 60%, 1)
$offWhite:   hsla(214, 100%, 98%, 1)
$border: hsla(225, 37%, 82%, 1)
$dark:  hsla(223, 22%, 41%, 1)
$g1: #1ba4f7
$g2: #4641ff


// Gradients
$gradient: linear-gradient(-135deg, $g1 0%, $g2 100%)


// Shadows
$shadowCard: 0px 10px 60px hsla(226, 85%, 27%, 0.15)
$shadowHeaderText: 0px 3px 6px hsla(235, 100%, 31%, 0.3)


// Easing
$zease:       cubic-bezier(0.165, 0.84, 0.44, 1)
$easeOutBack: cubic-bezier(0.175, 0.885, 0.32, 1.275)



// *************
// Initial Setup
// *************

html
  box-sizing: border-box
  font-size: 10px // Globally sets rems to increments of 10px. 1rem = 10px.
  margin: 0

*, *:before, *:after
  box-sizing: inherit

body
  position: relative
  margin: 0
  padding: 0
  background-color: $offWhite
  overflow-x: hidden

section
  margin-bottom: 10rem

ul
  list-style: none
  margin: 0
  padding: 0

ol
  margin: 0
  padding-left: 2rem

a
  text-decoration: none
  color: $primary
  cursor: pointer
  border-bottom: 2px solid white
  transition: 0.1s ease-in-out

  &:hover
    border-bottom: 2px solid $primary



// **********
// Typography
// **********

h1, h2, h3, h4, h5, h6, p, span, li, button
  margin: 0
  color: $dark
  -webkit-font-smoothing: antialiased
  -moz-osx-font-smoothing: grayscale

h1, h2, h3, h4, h5, h6
  font-family: 'Montserrat', Helvetica Neue, arial, sans-serif
  // font-weight: normal

p, span, li, button
  font-family: 'Montserrat', Helvetica Neue, arial, sans-serif

.caption
  color: lighten($dark, 20%)
  font-size: 15px
  line-height: 24px

.marBot2
  margin-bottom: 1.8rem
.marBot4
  margin-bottom: 4rem

.trackingPos
  letter-spacing: 0.15px
.trackingNeg
  letter-spacing: -0.05px

// Modular type scale (below) taken from the Root design system specs.
h1
  font-size: 4.8rem
  line-height: 6rem
h2
  font-size: 3.2rem
  line-height: 3.6rem
p, span, li
  font-size: 1.8rem
  line-height: 3rem
.p1
  font-size: 2rem
  line-height: 3.2rem
button
  font-size: 1.8rem
  line-height: 2.2rem

@media screen and (max-width: 350px)
  h1
    font-size: 4rem
    line-height: 5.4rem
  h2
    font-size: 2.8rem
    line-height: 3.2rem
  p, span, li
    font-size: 1.6rem
    line-height: 2.8rem
  .p1
    font-size: 1.8rem
    line-height: 3rem
  button
    font-size: 1.6rem
    line-height: 2rem




// ********
// Elements
// ********

.main
  position: relative
  z-index: 2
  max-width: 740px
  margin: -28rem auto // Fallback
  margin: -27vh auto
  padding: 20px

.card
  position: relative
  margin-bottom: 1.6rem
  padding: 5rem 4rem
  background-color: white
  border-radius: 1rem
  box-shadow: $shadowCard
  // These work toghter with .hide below ↓
  will-change: transform, scale, opacity
  transition: all 1.5s $zease
  opacity: 1
  transform: translateY(0) scale(1)

  h2
    margin-bottom: 2.4rem
    
// Intersection Observer applies this hide when offscreen
.hide
  opacity: 0
  transform: translateY(6rem) scale(0.93)




@media screen and (max-width: 500px)
  .main
    padding: 10px

  .card
    padding: 4rem 3rem

